--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ header > div nav, header > div nav ul li a {display: flex; flex-direction: row; 
 #logo {width: max-content; margin-right: 70px;}
 #logo a {display: block; padding: 20px 0;}
 #logo a img {width: 138px; height: auto;}
-#burger {display: none; width: 26px; height: 26px; display: none; flex-direction: column; justify-content: space-between; padding: 5px;}
+#burger {display: none; width: 26px; height: 26px; flex-direction: column; justify-content: space-between; padding: 5px;}
 #burger span {width: 100%; height: 3px; background: var(--very-vark-blue); transform-origin: 0 50%; transition: .3s;}
 header > div nav > div:last-child, header > div nav > div:last-child > div, header > div nav > div:last-child > div ul, header > div nav > div:last-child > div ul li, header > div nav > div:last-child > div ul li a {height: 100%;}
 header > div nav > div:last-child > div {position: absolute;}
